# christina-paper-analysis

./: data-analysis.py  main.py  pyproject.toml
data/: Datasett_MeMed_AUG_2025 – Kopi.xlsx  Supplementary Table 1 and 2.xlsx
