[project]
name = "christina-paper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair>=5.5.0",
    "fastexcel>=0.14.0",
    "marimo>=0.14.16",
    "openpyxl>=3.1.5",
    "polars>=1.32.0",
    "statsmodels>=0.14.5",
]
